-Added S3 proxy support to simplify development -Refactored servlet init options to support loading of configuration from environment variables -Initial client-side work example