@@ -1,8 +1,7 @@
-package com.browserhorde.server.util;
+package com.browserhorde.server.gson;
 
 import java.lang.reflect.Type;
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
 
 import com.google.gson.JsonDeserializationContext;
 import com.google.gson.JsonDeserializer;
@@ -12,24 +11,20 @@ import com.google.gson.JsonPrimitive;
 import com.google.gson.JsonSerializationContext;
 import com.google.gson.JsonSerializer;
 
-public class URLHandler implements JsonSerializer<URL>, JsonDeserializer<URL> {
+public class URIHandler implements JsonSerializer<URI>, JsonDeserializer<URI> {
 	@Override
-	public JsonElement serialize(URL o, Type type, JsonSerializationContext ctx) {
+	public JsonElement serialize(URI o, Type type, JsonSerializationContext ctx) {
 		return new JsonPrimitive(o.toString());
 	}
 
 	@Override
-	public URL deserialize(JsonElement el, Type type, JsonDeserializationContext ctx) throws JsonParseException {
+	public URI deserialize(JsonElement el, Type type, JsonDeserializationContext ctx) throws JsonParseException {
 		String value = el.getAsString();
 		if(value == null) {
 			return null;
 		}
 
-		try {
-			return new URL(value);
-		} catch(MalformedURLException e) {
-			throw new JsonParseException(e);
-		}
+		return URI.create(value);
 	}
 
 }
