@@ -1,7 +1,8 @@
-package com.browserhorde.server.util;
+package com.browserhorde.server.gson;
 
 import java.lang.reflect.Type;
-import java.net.URI;
+import java.net.MalformedURLException;
+import java.net.URL;
 
 import com.google.gson.JsonDeserializationContext;
 import com.google.gson.JsonDeserializer;
@@ -11,20 +12,24 @@ import com.google.gson.JsonPrimitive;
 import com.google.gson.JsonSerializationContext;
 import com.google.gson.JsonSerializer;
 
-public class URIHandler implements JsonSerializer<URI>, JsonDeserializer<URI> {
+public class URLHandler implements JsonSerializer<URL>, JsonDeserializer<URL> {
 	@Override
-	public JsonElement serialize(URI o, Type type, JsonSerializationContext ctx) {
+	public JsonElement serialize(URL o, Type type, JsonSerializationContext ctx) {
 		return new JsonPrimitive(o.toString());
 	}
 
 	@Override
-	public URI deserialize(JsonElement el, Type type, JsonDeserializationContext ctx) throws JsonParseException {
+	public URL deserialize(JsonElement el, Type type, JsonDeserializationContext ctx) throws JsonParseException {
 		String value = el.getAsString();
 		if(value == null) {
 			return null;
 		}
 
-		return URI.create(value);
+		try {
+			return new URL(value);
+		} catch(MalformedURLException e) {
+			throw new JsonParseException(e);
+		}
 	}
 
 }
